Bug 215567. Make 'auto' bottom/right in clip rects give the rect NS_MAXSIZE so we don't think a cliprect is empty when it isn't.